--- a/index.html
+++ b/index.html
@@ -1205,16 +1205,14 @@ function saveExpense(){
   } else {
     const isKopilka = name.toLowerCase().includes('копилк');
     if(isKopilka){
-      // Create entry in kopilka sheet instead of period sheet
-      const periodName = p.name.toLowerCase();
-      const stableId = 'k_' + periodName.replace(/\s+/g,'_') + '__в_копилку';
-      // Check if entry already exists for this period
-      const existing = (state.kopilka.entries||[]).find(e=>e.id===stableId);
-      if(existing){
-        existing.amount = amount;
+      if(!state.kopilka.entries) state.kopilka.entries=[];
+      const stableId = 'k_' + p.name.toLowerCase().replace(/\s+/g,'_') + '__в_копилку';
+      // Update existing or insert new
+      const existingIdx = state.kopilka.entries.findIndex(e=>e.id===stableId);
+      if(existingIdx>=0){
+        state.kopilka.entries[existingIdx].amount = amount;
       } else {
-        if(!state.kopilka.entries) state.kopilka.entries=[];
-        // Insert before first unpaid entry
+        // Insert after last paid entry (before first unpaid)
         const firstUnpaidIdx = state.kopilka.entries.findIndex(e=>!e.paid);
         const newEntry = {
           id: stableId,
@@ -1233,9 +1231,12 @@ function saveExpense(){
       document.getElementById('mk-val').textContent=fmt(state.kopilka.balance);
       showToast('✅ Добавлено в копилку!');
       saveState();closeModal('modal-expense');renderPeriod();
+      if(curTab==='kopilka') renderKopilka();
       if(gAccessToken){
         setSyncStatus('syncing','сохранение...');
+        // Write full table so rowIndex gets updated on next sync
         writeKopilkaToSheets()
+          .then(()=>syncFromSheets()) // re-read to get correct rowIndexes
           .then(()=>setSyncStatus('connected','синхронизировано'))
           .catch(()=>setSyncStatus('error','ошибка записи'));
       }
